--- a/res/layout/item_lc_comment.xml
+++ b/res/layout/item_lc_comment.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
+        android:layout_marginLeft="20dp"
         android:src="@drawable/profile_1"
         android:contentDescription="@string/app_name" />
 
