Fix detail transactions chart listener

--- a/res/layout/fragment_daily_transactions_detail_chart.xml
+++ b/res/layout/fragment_daily_transactions_detail_chart.xml
@@ -11,8 +11,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <com.echo.holographlibrary.PieGraph
-        android:id="@+id/pgTransactionsDetailChart"
+    <RelativeLayout
+        android:id="@+id/rlTransactionsDetailChart"
         android:layout_width="wrap_content"
         android:layout_height="110dp"
         android:layout_below="@+id/tvDetailChartDate"
