Polish a bit goal card

--- a/res/layout/item_goal.xml
+++ b/res/layout/item_goal.xml
@@ -21,21 +21,12 @@
             android:maxLines="1"
             android:text="@string/sample_goal_name" />
 
-        <TextView
-            android:id="@+id/tvMilestonesLeft"
-            style="@style/DashboardUI.GoalItem.Milestones"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:maxLines="1"
-            android:text="@string/sample_milestones_left" />
-
         <View
+            android:id="@+id/view1"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
-            android:background="@color/dashboard_gray_line"
-            android:layout_above="@+id/llGoalAmount" />
+            android:layout_above="@+id/llGoalAmount"
+            android:background="@color/dashboard_gray_line" />
 
         <LinearLayout
             android:id="@+id/llGoalAmount"
@@ -52,8 +43,8 @@
                 style="@style/DashboardUI.GoalItem.DueDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
                 android:maxLines="1"
+                android:paddingTop="8dp"
                 android:text="@string/sample_due_date_human" />
 
             <TextView
@@ -62,6 +53,31 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/sample_total_payment" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/llGoalAmount"
+            android:layout_below="@+id/tvName"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:orientation="vertical"
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/tvPctComplete"
+                style="@style/DashboardUI.GoalItem.PercentageComplete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sample_goal_percentage_complete" />
+
+            <TextView
+                android:id="@+id/tvComplete"
+                style="@style/DashboardUI.GoalItem.Milestones"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dashboard_goal_item_complete_label" />
         </LinearLayout>
     </RelativeLayout>
 
