--- a/res/layout/item_lc_create_comment.xml
+++ b/res/layout/item_lc_create_comment.xml
@@ -2,28 +2,36 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/dashboard_goal_item_background"
+    android:background="@color/lc_goal_comments_bg"
     android:orientation="vertical" >
-    
-        <ImageView
+
+    <ImageView
         android:id="@+id/ivPosterProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/profile_1"
-        android:layout_marginLeft="20dp"
-        android:contentDescription="@string/app_name" />
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="15dp"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/profile_1" />
 
-        <EditText
-            android:id="@+id/etComment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/ivPosterProfile"
-            android:layout_centerHorizontal="true"
-            android:ems="10"
-            android:inputType="text"
-            android:imeOptions="actionSend" >
-        </EditText>
+    <EditText
+        android:id="@+id/etComment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="15dp"
+        android:layout_toRightOf="@+id/ivPosterProfile"
+        android:background="@drawable/comment_edit_text"
+        android:ems="10"
+        android:hint="Comment..."
+        android:imeOptions="actionSend"
+        android:inputType="text"
+        android:padding="10dp" >
+
+        <requestFocus />
+    </EditText>
 
 </RelativeLayout>
