--- a/res/layout/item_lc_post.xml
+++ b/res/layout/item_lc_post.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/dashboard_goal_item_background"
+    android:background="@color/lc_goal_post_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/rlPost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp" >
 
         <ImageView
             android:id="@+id/ivPosterProfile"
@@ -16,42 +18,50 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:contentDescription="@string/app_name"
             android:src="@drawable/profile_1" />
 
-        <TextView
-            android:id="@+id/tvPostType"
-            style="@style/SmallText"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/ivPosterProfile"
-            android:text="@string/sample_post_type" />
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/tvPostText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tvPostType"
-            android:layout_below="@id/tvPostType"
-            android:text="@string/sample_post"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            <ImageView
+                android:id="@+id/ivPostType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:maxHeight="15dp"
+                android:src="@drawable/img_newpost_post" />
+
+            <TextView
+                android:id="@+id/tvPostText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/sample_post"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvPaymentDue"
             style="@style/MediumAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:text="@string/sample_total_payment"
             android:textColor="@color/app_green"
             android:visibility="gone" />
-        
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/llComents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/rlPost"
         android:orientation="vertical" >
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
