--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -34,6 +34,10 @@
     <color name="transactions_item_negative_amount_text">#D0021B</color>
     <color name="transactions_gray_line">#F3F3F3</color>
     
+    <!-- Lending Circle Goal View -->
+    <color name="lc_goal_post_bg">#F3F3F3</color>
+    <color name="lc_goal_comments_bg">#FBFBFB</color>
+    
     <!-- Add Transaction -->
     <color name="add_transaction_input_item_display_name">#80FFFFFF</color>
     <color name="add_transaction_input_item_display_value">@color/white</color>
