--- a/third-party-libs/circular_progress_bar/res/values/attrs.xml
+++ b/third-party-libs/circular_progress_bar/res/values/attrs.xml
@@ -8,6 +8,8 @@
         <attr name="titleColor" format="string"/>
         <attr name="subtitle" format="string"/>
         <attr name="subtitleColor" format="string"/>
-        <attr name="strokeWidthCircular" format="integer"/>
+        <attr name="circleStrokeWidth" format="integer"/>
+        <attr name="titleTextSize" format="float"/>
+        <attr name="subtitleTextSize" format="float"/>
     </declare-styleable>
 </resources>
