--- a/res/layout/activity_lc_details.xml
+++ b/res/layout/activity_lc_details.xml
@@ -1,40 +1,53 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context="${relativePackage}.${activityClass}"
+    android:id="@+id/flLCDetails" >
 
-    <FrameLayout
-        android:id="@+id/circleOfLC"
+    <com.nirhart.parallaxscroll.views.ParallaxListView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/lvLCDetails"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:layout_alignParentTop="true"
-        android:visibility="gone">
-    </FrameLayout>
+        android:layout_height="match_parent"
+        app:parallax_factor="1.9"
+        tools:context=".LCDetailsActivity" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/circleOfLC">
+    <!-- <FrameLayout -->
+    <!-- android:id="@+id/circleOfLC" -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="250dp" -->
+    <!-- android:layout_alignParentTop="true" -->
+    <!-- android:visibility="gone"> -->
+    <!-- </FrameLayout> -->
 
-        <ListView
-            android:id="@+id/llGoalPosts"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
-        </ListView>
 
-        <com.faizmalkani.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btnCreatePost"
-            android:layout_width="72dp"
-            android:layout_height="72dp"
-            android:layout_gravity="bottom|right"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
-            android:onClick="onCreatePost"
-            app:drawable="@drawable/btn_newpost"
-            app:color="#FFDF4D38" />
-    </FrameLayout>
+    <!-- <FrameLayout -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="wrap_content" -->
+    <!-- android:layout_alignParentLeft="true" -->
+    <!-- android:layout_below="@+id/circleOfLC"> -->
 
-</RelativeLayout>
+
+    <!-- <ListView -->
+    <!-- android:id="@+id/llGoalPosts" -->
+    <!-- android:layout_width="match_parent" -->
+    <!-- android:layout_height="match_parent" > -->
+    <!-- </ListView> -->
+
+    <com.faizmalkani.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnCreatePost"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:onClick="onCreatePost"
+        app:drawable="@drawable/btn_newpost"
+        app:color="#FFDF4D38" />
+    <!-- </FrameLayout> -->
+
+</FrameLayout>
