--- a/res/layout/fragment_post_detail.xml
+++ b/res/layout/fragment_post_detail.xml
@@ -9,8 +9,7 @@
         android:id="@+id/rlPost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp" >
+        android:layout_alignParentTop="true" >
 
         <ImageView
             android:id="@+id/ivPosterProfile"
@@ -57,48 +56,46 @@
             android:visibility="gone" />
     </RelativeLayout>
 
-    <LinearLayout
+    <ListView
         android:id="@+id/llComents"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:layout_below="@+id/rlPost" >
+    </ListView>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/lc_goal_comments_bg"
-    android:orientation="vertical" >
-
-    <ImageView
-        android:id="@+id/ivPosterProfile"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="15dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/profile_1" />
+        android:layout_alignParentBottom="true"
+        android:background="@color/lc_goal_comments_bg" >
 
-    <EditText
-        android:id="@+id/etComment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
-        android:layout_toRightOf="@+id/ivPosterProfile"
-        android:background="@drawable/comment_edit_text"
-        android:ems="10"
-        android:hint="Comment..."
-        android:imeOptions="actionSend"
-        android:inputType="text"
-        android:padding="10dp" >
+        <!-- <ImageView -->
+        <!-- android:id="@+id/ivPosterProfile" -->
+        <!-- android:layout_width="wrap_content" -->
+        <!-- android:layout_height="wrap_content" -->
+        <!-- android:layout_alignParentLeft="true" -->
+        <!-- android:layout_centerVertical="true" -->
+        <!-- android:layout_marginBottom="15dp" -->
+        <!-- android:layout_marginLeft="60dp" -->
+        <!-- android:layout_marginTop="15dp" -->
+        <!-- android:contentDescription="@string/app_name" -->
+        <!-- android:src="@drawable/profile_1" /> -->
 
-        <requestFocus />
-    </EditText>
+        <EditText
+            android:id="@+id/etComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="15dp"
+            android:background="@drawable/comment_edit_text"
+            android:ems="10"
+            android:hint="Comment..."
+            android:imeOptions="actionSend"
+            android:inputType="text"
+            android:padding="10dp" >
 
-</RelativeLayout>
-    
+            <requestFocus />
+        </EditText>
+    </RelativeLayout>
+
 </RelativeLayout>
