--- a/res/layout/item_lc_circle_view.xml
+++ b/res/layout/item_lc_circle_view.xml
@@ -2,14 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/circleOfLC"
     android:layout_width="match_parent"
-    android:layout_height="300dp"
+    android:layout_height="match_parent"
     android:layout_alignParentTop="true" >
 
     <fragment
         android:id="@+id/fPeopleCircle"
         android:name="org.missionassetfund.apps.android.fragments.PeopleCircleFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible" />
+        android:layout_height="250dp" />
 
 </FrameLayout>
