--- a/res/layout/item_lc_post.xml
+++ b/res/layout/item_lc_post.xml
@@ -9,8 +9,8 @@
         android:id="@+id/rlPost"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp" >
+        android:layout_marginBottom="15dp"
+        android:layout_marginTop="15dp" >
 
         <ImageView
             android:id="@+id/ivPosterProfile"
@@ -24,7 +24,7 @@
             android:src="@drawable/profile_1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/ivPosterProfile"
             android:orientation="vertical" >
@@ -33,14 +33,17 @@
                 android:id="@+id/ivPostType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:adjustViewBounds="true"
                 android:maxHeight="15dp"
                 android:src="@drawable/img_newpost_post" />
 
             <TextView
                 android:id="@+id/tvPostText"
-                android:layout_width="wrap_content"
+                style="@style/LendingCircleUI.Message"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
                 android:layout_marginTop="10dp"
                 android:text="@string/sample_post"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
