--- a/res/layout/item_lc_post.xml
+++ b/res/layout/item_lc_post.xml
@@ -58,6 +58,25 @@
             android:text="@string/sample_total_payment"
             android:textColor="@color/app_green"
             android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tvNumberOfComments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="5dp"
+            android:background="@drawable/number_comment_bg"
+            android:paddingTop="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingBottom="3dp"
+            android:text="4"
+            android:textColor="@color/white"
+            android:textSize="10sp"
+            android:textStyle="bold"
+            android:visibility="invisible" />
     </RelativeLayout>
 
     <LinearLayout
