--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -285,6 +285,19 @@
         <item name="android:textColor">@color/lc_message</item>
         <item name="android:textSize">14sp</item>
     </style>
+    
+    <style name="LendingCircleUI.PostReminderText">
+        <item name="android:textColor">@color/lc_message</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:drawableLeft">@drawable/img_time_gray</item>
+        <item name="android:drawablePadding">4dp</item>
+    </style>
+    
+    <style name="LendingCircleUI.PaymentAmount">
+        <item name="android:textColor">@color/dashboard_goal_item_name_text</item>
+        <item name="android:textSize">16sp</item>
+        <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
+    </style>
 
     <!-- Parse -->
     <style name="ParseLoginUI" />
