--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -39,5 +39,8 @@
     <dimen name="com_parse_ui_large_vertical_spacing">24dp</dimen>
     <dimen name="com_parse_ui_xlarge_vertical_spacing">36dp</dimen>
     <dimen name="com_parse_ui_small_horizontal_spacing">8dp</dimen>
-
+    
+    <!-- Circle View -->
+	<dimen name="profile_icon_size">24dp</dimen>
+	
 </resources>
