Add a border on profile icon when a user already paid

--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -42,5 +42,6 @@
     
     <!-- Circle View -->
 	<dimen name="profile_icon_size">24dp</dimen>
+	<dimen name="profile_radius_padding">2dp</dimen>
 	
 </resources>
