--- a/res/layout/fragment_create_post.xml
+++ b/res/layout/fragment_create_post.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="16dp" >
 
     <ImageView
@@ -11,7 +11,8 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="16dp"
-        android:paddingRight="4dp" />
+        android:paddingRight="4dp"
+        android:contentDescription="@string/app_name" />
 
     <TextView
         android:id="@+id/tvUserName"
