--- a/res/layout/item_lc_post.xml
+++ b/res/layout/item_lc_post.xml
@@ -14,13 +14,15 @@
 
         <ImageView
             android:id="@+id/ivPosterProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
+            android:adjustViewBounds="true"
             android:contentDescription="@string/app_name"
+            android:scaleType="fitCenter"
             android:src="@drawable/profile_1" />
 
         <LinearLayout
@@ -63,8 +65,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
             android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"
             android:text="@string/sample_total_payment"
             android:visibility="gone" />
 
