--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -307,6 +307,17 @@
         <item name="android:textSize">16sp</item>
         <item name="fontPath">fonts/OpenSans-Semibold.ttf</item>
     </style>
+    
+    <style name="LendingCircleUI.Contributed">
+        <item name="android:textColor">@color/dashboard_goal_item_milestones_text</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="LendingCircleUI.GoalAmount">
+        <item name="android:textColor">@color/dashboard_goal_item_name_text</item>
+        <item name="android:textSize">20sp</item>
+        <item name="fontPath">fonts/OpenSans-Light.ttf</item>
+    </style>
 
     <!-- Parse -->
     <style name="ParseLoginUI" />
